--- a/src/app/admin/accounts/accounts.component.html
+++ b/src/app/admin/accounts/accounts.component.html
@@ -62,7 +62,18 @@
                <input formControlName="password" type="password" class="form-control"/>
                <hr>
                <label>DOB</label>
-               <input formControlName="dob" type="text" class="form-control"/>
+               <div class="col-12">
+                    <div class="input-group">
+                         <input formControlName="dob" 
+                         ngbDatepicker
+                         placeholder="yyyy-mm-dd"
+                         #d="ngbDatepicker"
+                         type="text" class="form-control"/>
+                         <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()" type="button">
+                              click Date
+                         </button>
+                    </div>
+               </div>
           </form>
      </div>
      <div class="modal-footer">
